2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotForgetNotImplementedMethodsRule.cs: New. Rule to check if
	some method are incomplete (e.g. throwing NotImplementedException)
	[committed for Cedric Vivier with a few changes from myself]
	* Gendarme.Rules.BadPractice.mdp: Update MD project file.
	* Makefile.am: Add rule/test to the build.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ObsoleteMessagesShouldNotBeEmptyRule.cs: Remove unused field
	(self-test)

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Start using ../common.make

2008-07-04  Jb Evain  <jbevain@novell.com>

	* AvoidCallingProblematicMethodsRule.cs: refactor to avoid
	creating a new delegate type by using Func<,>, and use the
	lambda syntax to shorten anonymous methods declarations.

2008-07-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidCallingProblematicMethodsRule.cs: Use IComparer instead
	of IEqualityComparer and avoid the "constant" GetHashCode hack.
	Use a custom delagate in order to remove the struct allocations 
	and make the source code smaller (and easier to test).

2008-07-03  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidCallingProblematicMethodsRule.cs: New. Rule that check for
	potentially damaging / dangerous methods calls.
	* Gendarme.Rules.BadPractice.mdp: Update MD project file.
	* Makefile.am: Add rule/test to the build.

2008-06-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidVisibleConstantFieldRule.cs: New. Rule that check
	for a constant fields visible to other assemblies. Using them
	makes the value, not a reference to the field, part of the 
	assemblies that reference the field. This requires all those
	assemblies to be recompiled if the value change.
	* Gendarme.Rules.BadPractice.mdp: Update MD project file.
	* Makefile.am: Add rule/test to the build.

2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* ReplaceIncompleteOddnessCheckRule.cs: New. Rule that check